<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etInputWindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:inputType="number"
        android:textSize="55sp"
        android:gravity="end"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="40dp"
        android:focusableInTouchMode="false"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvOutputWindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="end"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btnC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/c"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btnMod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mod"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/div"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btnMul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mul"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn00"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_00"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/btn_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.IconButton.Filled"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>